packages/web/src/scss/settings/_utilities.scss
// 1. `word-break: break-word` is deprecated in favour of `overflow-wrap: anywhere`
//     https://developer.mozilla.org/en-US/docs/Web/CSS/word-break#break-word

@use 'sass:map';
@use '@tokens' as tokens;
@use '../tools/color-scheme';
@use '../tools/map' as spirit-map;
@use '../tools/utilities';

$accent-prefix: 'accent-';
$accent-tokens-key: 'accent-colors';
$emotion-prefix: 'emotion-';
$emotion-tokens-key: 'emotion-colors';

$utilities: (
    'background-color': (
        responsive: false,
        property: background-color,
        class: bg,
        generate-custom-properties: true,
        values: spirit-map.merge-multiple(
                utilities.generate-token-map(
                    $tokens-group: $accent-tokens-key,
                    $keys-to-generate: (
                        background-basic,
                        background-subtle,
                    ),
                    $prefix: $accent-prefix,
                    $remove-from-name: 'background',
                ),
                utilities.generate-token-map(
                    $tokens-group: $emotion-tokens-key,
                    $keys-to-generate: (
                        background-basic,
                        background-subtle,
                    ),
                    $prefix: $emotion-prefix,
                    $remove-from-name: 'background',
                ),
                (
                    primary: tokens.$background-primary,
                    secondary: tokens.$background-secondary,
                    tertiary: tokens.$background-tertiary,
                    neutral-basic: tokens.$neutral-background-basic,
                    neutral-subtle: tokens.$neutral-background-subtle,
                    selected-basic: tokens.$selected-background-basic,
                    selected-subtle: tokens.$selected-background-subtle,
                )
            ),
    ),
    'background-color-without-custom-properties': (
        responsive: false,
        property: background-color,
        class: bg,
        generate-custom-properties: false,
        values: (
            'color-scheme': color-scheme.background-color(),
        ),
    ),
    'background-gradient': (
        responsive: true,
        property: background-image,
        class: bg-gradient,
        generate-custom-properties: false,
        values: map.remove(tokens.$gradients, skeleton, basic-overlay),
    ),
    'border-color': (
        responsive: false,
        property: border-color,
        class: border,
        generate-custom-properties: false,
        values: spirit-map.merge-multiple(
                utilities.generate-token-map(
                    $tokens-group: $accent-tokens-key,
                    $keys-to-generate: (
                        border-basic,
                        border-subtle,
                    ),
                    $prefix: $accent-prefix,
                    $remove-from-name: 'border',
                ),
                utilities.generate-token-map(
                    $tokens-group: $emotion-tokens-key,
                    $keys-to-generate: (
                        border-basic,
                        border-subtle,
                    ),
                    $prefix: $emotion-prefix,
                    $remove-from-name: 'border',
                ),
                (
                    basic: tokens.$border-basic,
                ),
                (
                    'color-scheme': color-scheme.border-color(),
                )
            ),
    ),
    'border-radius': (
        responsive: true,
        property: border-radius,
        class: rounded,
        generate-custom-properties: false,
        values: tokens.$radii,
    ),
    'border-style': (
        responsive: false,
        property: border-style,
        class: border,
        generate-custom-properties: false,
        values: (
            solid: solid,
            dashed: dashed,
            dotted: dotted,
        ),
    ),
    'border-width': (
        responsive: false,
        property: border-width,
        class: border,
        generate-custom-properties: true,
        values: (
            0: tokens.$border-width-0,
            100: tokens.$border-width-100,
            200: tokens.$border-width-200,
        ),
    ),
    'display': (
        responsive: true,
        property: display,
        class: d,
        generate-custom-properties: false,
        values: (
            block,
            contents,
            flex,
            grid,
            inline,
            inline-block,
            inline-flex,
            none,
        ),
    ),
    'margin-x': (
        responsive: true,
        property: margin-inline,
        class: mx,
        generate-custom-properties: false,
        values: map.merge(
                tokens.$spaces,
                (
                    auto: auto,
                )
            ),
    ),
    'margin-y': (
        responsive: true,
        property: margin-block,
        class: my,
        generate-custom-properties: false,
        values: map.merge(
                tokens.$spaces,
                (
                    auto: auto,
                )
            ),
    ),
    'margin-top': (
        responsive: true,
        property: margin-top,
        class: mt,
        generate-custom-properties: false,
        values: map.merge(
                tokens.$spaces,
                (
                    auto: auto,
                )
            ),
    ),
    'margin-right': (
        responsive: true,
        property: margin-right,
        class: mr,
        generate-custom-properties: false,
        values: map.merge(
                tokens.$spaces,
                (
                    auto: auto,
                )
            ),
    ),
    'margin-bottom': (
        responsive: true,
        property: margin-bottom,
        class: mb,
        generate-custom-properties: false,
        values: map.merge(
                tokens.$spaces,
                (
                    auto: auto,
                )
            ),
    ),
    'margin-left': (
        responsive: true,
        property: margin-left,
        class: ml,
        generate-custom-properties: false,
        values: map.merge(
                tokens.$spaces,
                (
                    auto: auto,
                )
            ),
    ),
    'padding': (
        responsive: true,
        property: padding,
        class: p,
        generate-custom-properties: true,
        values: tokens.$spaces,
    ),
    'padding-x': (
        responsive: true,
        property: padding-inline,
        class: px,
        generate-custom-properties: true,
        values: tokens.$spaces,
    ),
    'padding-y': (
        responsive: true,
        property: padding-block,
        class: py,
        generate-custom-properties: true,
        values: tokens.$spaces,
    ),
    'padding-top': (
        responsive: true,
        property: padding-top,
        class: pt,
        generate-custom-properties: true,
        values: tokens.$spaces,
    ),
    'padding-right': (
        responsive: true,
        property: padding-right,
        class: pr,
        generate-custom-properties: true,
        values: tokens.$spaces,
    ),
    'padding-bottom': (
        responsive: true,
        property: padding-bottom,
        class: pb,
        generate-custom-properties: true,
        values: tokens.$spaces,
    ),
    'padding-left': (
        responsive: true,
        property: padding-left,
        class: pl,
        generate-custom-properties: true,
        values: tokens.$spaces,
    ),
    'text-align': (
        responsive: true,
        property: text-align,
        class: text,
        generate-custom-properties: false,
        values: left right center,
    ),
    'text-color': (
        responsive: false,
        property: color,
        class: text,
        generate-custom-properties: false,
        values: spirit-map.merge-multiple(
                utilities.generate-token-map(
                    $tokens-group: $accent-tokens-key,
                    $keys-to-generate: (
                        content-basic,
                        content-subtle,
                    ),
                    $prefix: $accent-prefix,
                    $remove-from-name: 'content',
                ),
                utilities.generate-token-map(
                    $tokens-group: $emotion-tokens-key,
                    $keys-to-generate: (
                        content-basic,
                        content-subtle,
                    ),
                    $prefix: $emotion-prefix,
                    $remove-from-name: 'content',
                ),
                (
                    primary: tokens.$text-primary,
                    secondary: tokens.$text-secondary,
                    tertiary: tokens.$text-tertiary,
                    neutral-basic: tokens.$neutral-content-basic,
                    neutral-subtle: tokens.$neutral-content-subtle,
                    selected-basic: tokens.$selected-content-basic,
                    selected-subtle: tokens.$selected-content-subtle,
                ),
                (
                    'color-scheme': color-scheme.color(),
                )
            ),
    ),
    'text-hyphens': (
        responsive: false,
        property: hyphens,
        class: 'text-hyphens',
        values: (
            auto,
            manual,
            none,
        ),
    ),
    'text-word-break': (
        responsive: false,
        property: word-break,
        class: 'text-word-break',
        values: (
            normal: normal,
            anywhere: break-all,
        ),
    ),
    'text-word-break-with-overflow-wrap': (
        responsive: false,
        // 1.
        property: overflow-wrap,
        class: 'text-word-break',
        values: (
            long-words: anywhere,
        ),
    ),
    'text-wrap': (
        responsive: false,
        property: text-wrap,
        class: 'text-wrap',
        values: (
            balance,
            nowrap,
            // Pretty isn't fully supported across browsers.
            // See note in utilities/_utilities.scss.
            pretty,
        ),
    ),
);

$utilities-breakpoint-specific: (
    'display': (
        property: display,
        class: d,
        values: (
            none,
        ),
    ),
);

